Correct spacing on Case>"Why?" panel even more

--- a/app/assets/sass/_case-why-panel.scss
+++ b/app/assets/sass/_case-why-panel.scss
@@ -1,9 +1,9 @@
-.mspsds-case-why-panel .govuk-grid-column-two-thirds .govuk-grid-column-one-half {
-  padding-right: govuk-spacing(0);
-}
-
 .mspsds-case-why-panel .govuk-grid-column-two-thirds .govuk-grid-column-one-half:first-child {
   padding-left: govuk-spacing(0);
+}
+
+.mspsds-case-why-panel .govuk-grid-column-two-thirds .govuk-grid-column-one-half:nth-child(2) {
+  padding-right: govuk-spacing(0);
 }
 
 .mspsds-case-why-panel .govuk-grid-column-two-thirds .govuk-grid-column-full {
